[tool.poetry]
name = "march_madness"
version = "0.1.0"
description = ""
authors = ["Brian Ryall <brianryall@fastmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
kaggle = "^1.5.6"

[tool.poetry.dev-dependencies]
cookiecutter = "^1.7.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
